# CompCheck

./: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: actions.yaml
CompCheck/: manage.py
CompCheck/CompCheck/: settings.py  urls.py  wsgi.py
CompCheck/archive/: admin.py  models.py  views.py
CompCheck/archive/migrations/: 0001_initial.py
CompCheck/archive/tests/: test_models.py  test_urls.py
CompCheck/components/: models.py  urls.py  views.py
CompCheck/computer/: models.py
CompCheck/main/: views.py
CompCheck/templates/: base.html
CompCheck/templates/archive/: CPU.html  GPU.html  archive.html
CompCheck/templates/components/: components.html
CompCheck/templates/includes/: footer.html  header.html
CompCheck/templates/users/: login.html  registration.html
CompCheck/users/: forms.py  models.py  urls.py  views.py
CompCheck/users/migrations/: 0001_initial.py  0002_remove_user_user_telephone_user_image_and_more.py
backend/CompCheck/: asgi.py  settings.py
backend/app/archive/: admin.py  apps.py  models.py  serealizers.py  urls.py
backend/app/components/: admin.py  apps.py  models.py  urls.py  views.py
backend/app/computer/: apps.py  models.py
backend/app/main/: urls.py
backend/app/users/: forms.py  models.py  views.py
backend/archive/: urls.py  views.py
backend/archive/tests/: test_models.py  test_serealizers.py
backend/components/: admin.py  models.py  urls.py  views.py
backend/computer/: admin.py  models.py
backend/core/: settings.py  urls.py
backend/users/: admin.py  forms.py
(+22 files in other folders)
